[package]
name = "anypki"
version = "0.1.6"
authors = ["Delta4 <delta4chat@gmx.com>"]
edition = "2021"
description="AnyPKI is a fully customizable PKI tool that allows your project to have a customized CA trust chain, blacklist/whitelist filtering root CAs by Country Code, Serial Number, SHA-1/SHA-256 fingerprint, or Issuer Name."
license="GPL-3.0"
repository="https://github.com/delta4chat/anypki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
native-tls = ["dep:native-tls"]

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
bcder = "0.7.4"
country-code-enum = "0.2.0"
hex = "0.4.3"
hex-literal = "0.4.1"
native-tls = { optional = true, version = "0.2.12", default-features = false, features = ["alpn", "vendored"] }
rustls-pki-types = "1.10.0"
scc = "2.2.5"
slice-find = "0.0.1"
x509cert = "0.25.1"
#x509cert = { path = "../cryptography-rs/x509-certificate/" }

[profile.release]
panic = "unwind"
opt-level = 3
overflow-checks = true
debug = 2
lto = true
codegen-units = 1

