[package]
name = "anypki"
version = "0.2.1"
authors = ["Delta4 <delta4chat@gmx.com>"]
edition = "2021"
description="AnyPKI is a fully customizable PKI tool that allows your project to have a customized CA trust chain, blacklist/whitelist filtering root CAs by Country Code, Serial Number, SHA-1/SHA-256 fingerprint, or Issuer Name."
license="GPL-3.0"
repository="https://github.com/delta4chat/anypki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mozilla-root-ca = ["dep:mozilla-root-ca"]
native-tls = ["dep:native-tls"]
rustls-verifier = ["dep:rustls", "dep:webpki-roots"]

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }

hex = "0.4.3"
hex-literal = "0.4.1"

country-code-enum = "0.2.0"
bcder = "0.7.5"

native-tls = { optional = true, version = "0.2.14", default-features = false, features = ["vendored"] }
rustls-pki-types = "1.11.0"

scc2 = "2.4.3"

slice-find = "0.0.2"

x509cert = "0.25.3"
#x509cert = { path = "../cryptography-rs/x509-certificate/" }

mozilla-root-ca = { optional = true, version = ">=0.0.0", features = ["x509cert", "pem"], default-features = false }
rustls = { optional = true, version = "0.23.26", default-features = false }
webpki-roots = { optional = true, version = "0.26.9", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
constant_time_eq = "0.3.1"

[profile.release]
panic = "unwind"
opt-level = 3
overflow-checks = true
debug = 2
lto = true
codegen-units = 1

